fixed mobile gap

--- a/components/Header/Header.module.scss
+++ b/components/Header/Header.module.scss
@@ -6,3 +6,9 @@
   background-color: white;
   padding-bottom: 1rem;
 }
+
+@media screen and (max-width: 800px) {
+  .header {
+    top: 61px;
+  }
+}
